--- a/RulesProvider/NHentai_Assets.yaml
+++ b/RulesProvider/NHentai_Assets.yaml
@@ -1,4 +1,4 @@
 
 payload:
-    - DOMAIN-SUFFIX,t[0-9]+.nhentai.net
-    - DOMAIN-SUFFIX,i[0-9]+.nhentai.net
+    - DOMAIN-KEYWORD,t[0-9]+.nhentai.net
+    - DOMAIN-KEYWORD,i[0-9]+.nhentai.net
